# t2kdataframe

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
_t2kdataframe/: CMakeLists.txt  example.py
_t2kdataframe/t2kdataframe/: T2KDataSource.cxx  T2KDataSource.hxx  T2KDataSourceLinkDef.h  buildmakeproject.C
pyt2k/: __init__.py
pyt2k/examples/: exntuple.py
src/: T2KDataSource.cxx  T2KDataSource.hxx  example.cxx
